--- a/package.json
+++ b/package.json
@@ -30,21 +30,27 @@
     "test": "karma"
   },
   "dependencies": {
+    "bluebird": "^2.9.34",
     "bootstrap": "^3.3.5",
-    "chromedriver": "^2.16.0",
+    "chromedriver": "^2.18.0",
     "flux-constants": "^0.2.2",
     "immutable": "^3.7.4",
     "imports-loader": "^0.6.4",
     "jquery": "^1.11.3",
-    "nightwatch": "^0.7.9",
-    "phantomjs": "^1.9.17",
+    "nightwatch": "^0.7.11",
+    "phantomjs": "^1.9.18",
     "react": "^0.13.3",
-    "react-cookie": "^0.2.5",
-    "react-redux": "^0.2.2",
+    "react-cookie": "^0.2.6",
+    "react-redux": "^1.0.0",
     "react-router": "^0.13.3",
-    "redux": "^1.0.0-rc",
+    "redux": "^1.0.1",
+    "redux-action-utils": "^2.0.0",
+    "redux-logger": "^1.0.6",
     "redux-thunk": "^0.1.0",
-    "selenium-standalone": "^4.5.3"
+    "selenium-standalone": "^4.5.3",
+    "string.prototype.padleft": "^1.0.0",
+    "superagent": "^1.3.0",
+    "superagent-bluebird-promise": "^2.1.0"
   },
   "devDependencies": {
     "babel": "^5.5.4",
@@ -55,8 +61,8 @@
     "file-loader": "^0.8.4",
     "node-libs-browser": "^0.5.2",
     "react-hot-loader": "^1.2.8",
-    "redux-devtools": "^0.1.2",
-    "redux-devtools-diff-monitor": "^0.2.1",
+    "redux-devtools": "^1.1.1",
+    "redux-devtools-diff-monitor": "^0.2.2",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.9.10",
