--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workshop",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Build for workshop to cooperate, even for our official website.",
   "main": "./build/index.html",
   "scripts": {
@@ -25,47 +25,53 @@
   "homepage": "https://github.com/zaoldyeck/workshop",
   "scripts": {
     "start": "npm run dev && webpack-dev-server --host 0.0.0.0",
-    "dev": "DEV=1 webpack -d",
+    "dev": "DEV=1 webpack -p",
     "build": "DEV=0 webpack -p",
     "test": "karma"
   },
   "dependencies": {
-    "bluebird": "^2.9.34",
+    "bluebird": "^2.10.1",
     "bootstrap": "^3.3.5",
-    "chromedriver": "^2.18.0",
+    "chromedriver": "^2.19.0",
     "flux-constants": "^0.2.2",
-    "immutable": "^3.7.4",
+    "history": "^1.11.0",
+    "immutable": "^3.7.5",
     "imports-loader": "^0.6.4",
-    "jquery": "^1.11.3",
-    "nightwatch": "^0.7.11",
+    "jquery": "^2.1.4",
+    "nightwatch": "^0.8.3",
     "phantomjs": "^1.9.18",
     "react": "^0.13.3",
-    "react-cookie": "^0.2.6",
-    "react-redux": "^1.0.0",
-    "react-router": "^0.13.3",
-    "redux": "^1.0.1",
+    "react-bootstrap": "^0.25.2",
+    "react-cookie": "^0.3.4",
+    "react-redux": "^3.0.0",
+    "react-router": "^1.0.0-rc1",
+    "react-spinkit": "^1.1.4",
+    "redux": "^3.0.0",
     "redux-action-utils": "^2.0.0",
-    "redux-logger": "^1.0.6",
-    "redux-thunk": "^0.1.0",
-    "selenium-standalone": "^4.5.3",
+    "redux-async": "^2.0.0",
+    "redux-diff-logger": "0.0.6",
+    "redux-logger": "^1.0.9",
+    "redux-thunk": "^1.0.0",
+    "scrollreveal": "^2.3.2",
+    "selenium-standalone": "^4.6.0",
     "string.prototype.padleft": "^1.0.0",
-    "superagent": "^1.3.0",
+    "superagent": "^1.4.0",
     "superagent-bluebird-promise": "^2.1.0"
   },
   "devDependencies": {
-    "babel": "^5.5.4",
-    "babel-core": "^5.5.4",
-    "babel-loader": "^5.1.4",
-    "css-loader": "^0.15.2",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "babel-plugin-object-assign": "^1.2.1",
+    "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
-    "node-libs-browser": "^0.5.2",
-    "react-hot-loader": "^1.2.8",
-    "redux-devtools": "^1.1.1",
-    "redux-devtools-diff-monitor": "^0.2.2",
-    "style-loader": "^0.12.3",
+    "node-libs-browser": "^0.5.3",
+    "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^2.1.3",
+    "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
-    "webpack": "^1.9.10",
-    "webpack-dev-server": "^1.9.0"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.11.0"
   }
 }
