--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Build for workshop to cooperate, even for our official website.",
   "main": "./build/index.html",
   "scripts": {
-    "test": "test"
+    "build": "webpack --config webpack.config.prod.js",
+    "start": "node devServer.js",
+    "test": "karma"
   },
   "repository": {
     "type": "git",
@@ -23,12 +25,6 @@
     "url": "https://github.com/zaoldyeck/workshop/issues"
   },
   "homepage": "https://github.com/zaoldyeck/workshop",
-  "scripts": {
-    "start": "npm run dev && webpack-dev-server --host 0.0.0.0",
-    "dev": "DEV=1 webpack -p",
-    "build": "DEV=0 webpack -p",
-    "test": "karma"
-  },
   "dependencies": {
     "bluebird": "^2.10.1",
     "bootstrap": "^3.3.5",
@@ -50,7 +46,7 @@
     "redux-action-utils": "^2.0.0",
     "redux-async": "^2.0.0",
     "redux-diff-logger": "0.0.6",
-    "redux-logger": "^1.0.9",
+    "redux-logger": "^2.0.0",
     "redux-thunk": "^1.0.0",
     "scrollreveal": "^2.3.2",
     "selenium-standalone": "^4.6.0",
@@ -61,17 +57,27 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
     "babel-plugin-object-assign": "^1.2.1",
+    "babel-plugin-react-transform": "^1.1.1",
     "css-loader": "^0.19.0",
+    "eslint": "^1.5.1",
+    "eslint-plugin-react": "^3.4.2",
+    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "node-libs-browser": "^0.5.3",
-    "react-hot-loader": "^1.3.0",
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.0",
+    "redbox-react": "^1.1.1",
     "redux-devtools": "^2.1.3",
+    "rimraf": "^2.4.3",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.11.0"
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.11.0",
+    "webpack-hot-middleware": "^2.2.0"
   }
 }
