--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "workshop",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Build for workshop to cooperate, even for our official website.",
   "main": "./build/index.html",
   "scripts": {
-    "build": "webpack --config webpack.config.prod.js",
+    "clean": "rimraf build/static",
+    "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build": "npm run clean && npm run build:webpack",
     "start": "node devServer.js",
-    "test": "karma"
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -26,58 +28,67 @@
   },
   "homepage": "https://github.com/zaoldyeck/workshop",
   "dependencies": {
-    "bluebird": "^2.10.1",
+    "bluebird": "^2.10.2",
     "bootstrap": "^3.3.5",
-    "chromedriver": "^2.19.0",
+    "fbjs": "^0.4.0",
+    "fixed-data-table": "^0.5.0",
+    "flexboxgrid": "^6.3.0",
     "flux-constants": "^0.2.2",
-    "history": "^1.11.1",
+    "history": "^1.13.0",
     "immutable": "^3.7.5",
-    "imports-loader": "^0.6.4",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.1.4",
-    "nightwatch": "^0.8.3",
-    "phantomjs": "^1.9.18",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.25.2",
-    "react-cookie": "^0.3.4",
-    "react-redux": "^3.0.1",
-    "react-router": "^1.0.0-rc1",
+    "material-ui": "^0.13.1",
+    "react": "^0.14.2",
+    "react-addons-create-fragment": "^0.14.2",
+    "react-addons-pure-render-mixin": "^0.14.2",
+    "react-addons-transition-group": "^0.14.2",
+    "react-addons-update": "^0.14.2",
+    "react-bootstrap": "^0.27.3",
+    "react-dom": "^0.14.2",
+    "react-grid-layout": "^0.8.5",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.0-rc4",
     "react-spinkit": "^1.1.4",
-    "redux": "^3.0.2",
+    "react-tap-event-plugin": "^0.2.1",
+    "redux": "^3.0.4",
     "redux-action-utils": "^2.0.0",
     "redux-async": "^2.0.0",
     "redux-diff-logger": "0.0.6",
-    "redux-logger": "^2.0.1",
+    "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
     "scrollreveal": "^2.3.2",
-    "selenium-standalone": "^4.7.0",
+    "selenium-standalone": "^4.7.1",
+    "semantic-ui-css": "^2.1.4",
     "string.prototype.padleft": "^2.0.0",
     "superagent": "^1.4.0",
     "superagent-bluebird-promise": "^2.1.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
+    "babel-core": "^5.4.7",
+    "babel-eslint": "^3.1.9",
+    "babel-loader": "^5.1.2",
     "babel-plugin-object-assign": "^1.2.1",
     "babel-plugin-react-transform": "^1.1.1",
-    "css-loader": "^0.19.0",
-    "eslint": "^1.5.1",
-    "eslint-plugin-react": "^3.5.1",
+    "chromedriver": "^2.19.0",
+    "css-loader": "^0.22.0",
+    "eslint": "^1.8.0",
+    "eslint-plugin-react": "^3.7.1",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^0.8.2",
+    "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
+    "nightwatch": "^0.8.6",
     "node-libs-browser": "^0.5.3",
+    "phantomjs": "^1.9.18",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.1.1",
     "redux-devtools": "^2.1.5",
     "rimraf": "^2.4.3",
-    "style-loader": "^0.12.4",
+    "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-dev-server": "^1.12.0",
-    "webpack-hot-middleware": "^2.3.0"
+    "webpack-hot-middleware": "^2.4.1"
   }
 }
